@@ -9,6 +9,9 @@ Version 10.34 22-April-2019
 check on this was ever implemented. This omission has been rectified; it fixes
 ClusterFuzz 14376.
 
+2. Improved the invalid utf32 support of the JIT compiler. Now it correctly
+detects invalid characters in the 0xd800-0xdfff range.
+
 
 Version 10.33 16-April-2019
 ---------------------------
